--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "antd": "^4.16.9",
     "apollo-boost": "^0.4.9",
     "bootstrap": "^4.2.1",
-    "boxen": "^4.2.0",
-    "chalk": "^4.1.0",
     "chart.js": "^3.4.1",
     "dayjs": "^1.10.7",
     "detect-newline": "^4.0.0",
@@ -41,14 +39,9 @@
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
-    "inquirer": "^8.2.4",
     "jest": "^27.4.5",
     "jest-docblock": "^27.4.0",
     "js-cookie": "^3.0.1",
-    "markdown-js": "^0.0.4",
-    "marked": "^4.0.10",
-    "marked-terminal": "^4.1.0",
-    "node-cmd": "^5.0.0",
     "popper.js": "^1.16.1",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
@@ -77,8 +70,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint \"**/*.{ts,tsx}\"",
     "lint-fix": "eslint \"**/*.{ts,tsx}\" --fix",
-    "format": "prettier --write \"**/*.{ts,tsx,json,scss,css}\"",
-    "setup": "yarn add boxen@^4.2.0 chalk@^4.1.0 inquirer@^8.2.4 markdown-js@^0.0.4 marked@^4.0.10 marked-terminal@^4.1.0 node-cmd@^5.0.0 -f && node setup_file.js"
+    "format": "prettier --write \"**/*.{ts,tsx,json,scss,css}\""
   },
   "eslintConfig": {
     "extends": [
@@ -111,9 +103,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest-localstorage-mock": "^2.4.19",
     "jest-location-mock": "^1.0.9",
-    "jquery": "^3.2.1",
-    "prompt-sync": "^4.2.0",
-    "valid-url": "^1.0.9"
+    "jquery": "^3.2.1"
   },
   "resolutions": {
     "@apollo/client": "^3.4.0-beta.19"
