--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -50,7 +50,17 @@ jobs:
         run: yarn
       - name: Run tests
         run: yarn test
-
+  
+  Formatting-Linting:
+    name: Check formatting and linting
+    runs-on: ubuntu-latest
+    needs: Continuous-Integration
+    steps:
+      - name: Check linting
+        run: yarn lint-check
+      - name: Check formatting
+        run: yarn format-check
+  
   Code-Coverage:
     name: Shows code coverage
     runs-on: ubuntu-latest
