--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -39,6 +39,11 @@ jobs:
       - run: chmod +x ./.github/workflows/countline.py
       - run: |
           ./.github/workflows/countline.py --exclude_files src/screens/LoginPage/LoginPage.tsx
+      - name: Install Dependencies
+        run: yarn
+      - name: Check linting
+        run: yarn lint-check
+      
 
   Continuous-Integration:
     name: Continuous integration on pull request
@@ -51,15 +56,13 @@ jobs:
       - name: Run tests
         run: yarn test
   
-  Formatting-Linting:
-    name: Check formatting and linting
+  Formatting:
+    name: Check formatting
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
       - name: Install Dependencies
         run: yarn
-      - name: Check linting
-        run: yarn lint-check
       - name: Check formatting
         run: yarn format-check
   
