--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -27,8 +27,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Dependencies
         run: yarn
-      - name: Run ESLint
-        run: yarn lint
+      - name: Run linting check
+        run: yarn lint:check
+
 
   Count-lines-of-code:
     name: Total number of lines in every file should not be more than 400
@@ -39,10 +40,6 @@ jobs:
       - run: chmod +x ./.github/workflows/countline.py
       - run: |
           ./.github/workflows/countline.py --exclude_files src/screens/LoginPage/LoginPage.tsx
-      - name: Install Dependencies
-        run: yarn
-      - name: Check linting
-        run: yarn lint:check
       
   Formatting:
     name: Check formatting
