--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -51,7 +51,7 @@ jobs:
         run: yarn
       - name: Check formatting
         run: yarn format:check
-      - name: Check formatting
+      - name: Check for type errors
         run: yarn typecheck
   
   Continuous-Integration:
