--- a/package.json
+++ b/package.json
@@ -4,64 +4,64 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@apollo/client": "^3.4.12",
+    "@apollo/client": "^3.7.7",
     "@apollo/link-error": "^2.0.0-beta.3",
     "@apollo/react-testing": "^4.0.0",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.3",
-    "@mui/material": "^5.8.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.8",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^26.0.24",
-    "@types/jquery": "^3.5.6",
-    "@types/node": "^12.20.16",
-    "@types/react-bootstrap": "^0.32.26",
-    "@types/react-datepicker": "^4.1.4",
-    "@types/react-dom": "^17.0.9",
+    "@types/jest": "^29.4.0",
+    "@types/jquery": "^3.5.16",
+    "@types/node": "^18.13.0",
+    "@types/react-bootstrap": "^0.32.32",
+    "@types/react-datepicker": "^4.8.0",
+    "@types/react-dom": "^18.0.10",
     "@types/react-google-recaptcha": "^2.1.5",
-    "@types/react-modal": "^3.12.1",
-    "antd": "^4.16.9",
+    "@types/react-modal": "^3.13.1",
+    "antd": "^5.2.0",
     "apollo-boost": "^0.4.9",
-    "bootstrap": "^4.2.1",
-    "chart.js": "^3.4.1",
-    "dayjs": "^1.10.7",
+    "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.0",
+    "dayjs": "^1.11.7",
     "detect-newline": "^4.0.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^25.3.4",
-    "eslint-plugin-prettier": "^3.4.0",
+    "enzyme-adapter-react-16": "^1.15.7",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "flag-icon-css": "^4.1.7",
-    "graphql": "^15.5.1",
-    "i18next": "^21.8.14",
-    "i18next-browser-languagedetector": "^6.1.4",
-    "i18next-http-backend": "^1.4.1",
-    "jest": "^27.4.5",
-    "jest-docblock": "^27.4.0",
+    "graphql": "^16.6.0",
+    "i18next": "^22.4.9",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
+    "jest": "^29.4.2",
+    "jest-docblock": "^29.4.2",
     "js-cookie": "^3.0.1",
     "popper.js": "^1.16.1",
-    "prettier": "^2.3.2",
-    "react": "^17.0.2",
+    "prettier": "^2.8.4",
+    "react": "^18.2.0",
     "react-apollo": "^3.1.5",
-    "react-bootstrap": "^1.6.1",
-    "react-chartjs-2": "^3.0.3",
-    "react-datepicker": "^4.2.0",
-    "react-dom": "^17.0.2",
+    "react-bootstrap": "^2.7.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.10.0",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
-    "react-i18next": "^11.18.1",
-    "react-modal": "^3.14.3",
-    "react-redux": "^7.2.5",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.3",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
-    "typescript": "^4.3.5",
-    "web-vitals": "^1.0.1",
-    "yarn": "^1.22.17"
+    "react-i18next": "^12.1.5",
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "typescript": "^4.9.5",
+    "web-vitals": "^3.1.1",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "serve": "react-scripts start",
@@ -71,8 +71,7 @@
     "lint:check": "eslint \"**/*.{ts,tsx}\" --max-warnings=0",
     "lint:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "format:fix": "prettier --write \"**/*.{ts,tsx,json,scss,css}\"",
-    "format:check": "prettier --check \"**/*.{ts,tsx,json,scss,css}\"",
-    "typecheck": "tsc --project tsconfig.json --noEmit"
+    "format:check": "prettier --check \"**/*.{ts,tsx,json,scss,css}\""
   },
   "eslintConfig": {
     "extends": [
@@ -93,19 +92,19 @@
     ]
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@types/enzyme": "^3.10.9",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/enzyme": "^3.10.12",
     "@types/js-cookie": "^3.0.2",
-    "@types/react": "^17.0.14",
-    "@types/react-router-dom": "^5.1.8",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "jest-localstorage-mock": "^2.4.19",
+    "@types/react": "^18.0.27",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest-localstorage-mock": "^2.4.26",
     "jest-location-mock": "^1.0.9",
-    "jquery": "^3.2.1"
+    "jquery": "^3.6.3"
   },
   "resolutions": {
     "@apollo/client": "^3.4.0-beta.19"
