--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,7 @@
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "64x64 32x32 24x24 16x16" 
     },
     {
       "src": "logo512.png",
