--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-modal": "^3.12.1",
     "antd": "^4.16.9",
     "apollo-boost": "^0.4.9",
+    "apollo-link-error": "^1.1.13",
     "bootstrap": "^4.2.1",
     "chart.js": "^3.4.1",
     "dayjs": "^1.10.7",
@@ -104,7 +105,7 @@
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^8.0.3",
+    "husky": "^8.0.0",
     "jest-localstorage-mock": "^2.4.19",
     "jest-location-mock": "^1.0.9",
     "jquery": "^3.2.1"
