--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# files that interfere with YARN
-.package-lock.json
-package-lock.json
+# files that interfere with NPM
+yarn.lock
+pnpm-lock.yaml
 
 # dependencies
 /node_modules
