--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chart.js": "^3.4.1",
     "dayjs": "^1.10.7",
     "detect-newline": "^4.0.0",
+    "docusaurus": "^1.14.7",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint-config-prettier": "^8.3.0",
@@ -39,7 +40,7 @@
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
-    "jest": "^27.4.5",
+    "jest": "^29.5.0",
     "jest-docblock": "^27.4.0",
     "js-cookie": "^3.0.1",
     "popper.js": "^1.16.1",
