--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-hook-form": "^7.43.5",
     "react-i18next": "^11.18.1",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.5",
