--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@apollo/react-testing": "^4.0.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@faker-js/faker": "^7.6.0",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
     "@testing-library/jest-dom": "^5.14.1",
@@ -42,6 +43,7 @@
     "jest": "^27.4.5",
     "jest-docblock": "^27.4.0",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "popper.js": "^1.16.1",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
@@ -99,6 +101,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@types/enzyme": "^3.10.9",
     "@types/js-cookie": "^3.0.2",
+    "@types/lodash": "^4.14.191",
     "@types/react": "^17.0.14",
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
