--- a/.squash.yml
+++ b/.squash.yml
@@ -6,8 +6,7 @@ deployments:
       - RUN bash -c "curl -sL https://deb.nodesource.com/setup_18.x | bash -"
       - apt install -y nodejs
       - cd /code
-      - sudo npm install -g yarn@1.22.17
+      - npm install -g yarn@1.22.17
       - yarn
     launch_steps:
       - yarn serve
-    port_forwarding: 80:3000
