--- a/.squash.yml
+++ b/.squash.yml
@@ -11,4 +11,6 @@ deployments:
     launch_steps:
       - yarn serve
     port_forwarding: 80:3000
-    run_options: --env REACT_APP_TALAWA_URL="${REACT_APP_TALAWA_URL}" REACT_APP_RECAPTCHA_SITE_KEY="${REACT_APP_RECAPTCHA_SITE_KEY}"
+    run_options: 
+      - --env REACT_APP_TALAWA_URL="${REACT_APP_TALAWA_URL}"
+      - --env REACT_APP_RECAPTCHA_SITE_KEY="${REACT_APP_RECAPTCHA_SITE_KEY}"
