--- a/.github/workflows/pull-request-target.yml
+++ b/.github/workflows/pull-request-target.yml
@@ -57,6 +57,8 @@ jobs:
             3.  person who verifies matching issues by others that should be closed.
             4.  person who gives general guidance in fixing your tests
 
+            ## Other
+            
             :dart: Please be considerate of our volunteers' time. Contacting the person who assigned the reviewers is not advised unless they ask for your input. Do not @ the person who did the assignment otherwise.
 
 
