--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-modal": "^3.12.1",
+    "@typescript-eslint/scope-manager": "5.57.0",
     "antd": "^4.16.9",
     "apollo-boost": "^0.4.9",
     "bootstrap": "^4.2.1",
