--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -1,27 +1,14 @@
-##############################################################################
-##############################################################################
-#
-# NOTE!
-#
-# Please read the README.md file in this directory that defines what should
-# be placed in this file
-#
-##############################################################################
-##############################################################################
-
 name: PR Workflow
 on:
-  pull_request:
+  push:
     branches:
       - '**'
 
 env:
-    CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
-    
+  CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
+
 jobs:
-
   Continuous-Integration:
-
     name: Performs linting, formatting, type-checking and testing on the application
     runs-on: ubuntu-latest
     steps:
@@ -34,8 +21,8 @@ jobs:
         run: npm run lint:check
       
       - name: Count number of lines
-      - run: chmod +x ./.github/workflows/countline.py
-      - run: |
+        run: |
+          chmod +x ./.github/workflows/countline.py
           ./.github/workflows/countline.py --exclude_files src/screens/LoginPage/LoginPage.tsx
 
       - name: Check formatting
