--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -25,6 +25,7 @@ jobs:
     name: Performs linting, formatting, type-checking and testing on the application
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout the Repository
       - uses: actions/checkout@v3
 
       - name: Install Dependencies
@@ -34,8 +35,8 @@ jobs:
         run: npm run lint:check
       
       - name: Count number of lines
-      - run: chmod +x ./.github/workflows/countline.py
       - run: |
+          chmod +x ./.github/workflows/countline.py
           ./.github/workflows/countline.py --exclude_files src/screens/LoginPage/LoginPage.tsx
 
       - name: Check formatting
