--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "husky": "^8.0.3",
     "jest-localstorage-mock": "^2.4.19",
     "jest-location-mock": "^1.0.9",
+    "jest-preview": "^0.3.1",
     "jquery": "^3.2.1"
   },
   "resolutions": {
