--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@typescript-eslint/parser": "^5.9.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^8.0.3",
+    "jest-enzyme": "^7.1.2",
     "jest-localstorage-mock": "^2.4.19",
     "jest-location-mock": "^1.0.9",
     "jest-preview": "^0.3.1",
