--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
-    "jest": "^27.4.5",
     "jest-docblock": "^27.4.0",
     "js-cookie": "^3.0.1",
     "popper.js": "^1.16.1",
@@ -62,7 +61,8 @@
   "scripts": {
     "serve": "react-scripts start",
     "build": "react-scripts build",
-    "test": "cross-env NODE_ENV=test node scripts/test.js --watchAll --coverage",
+    "test": "react-scripts test --watchAll --coverage",
+    "test:debug": "cross-env NODE_ENV=test node scripts/test.js --watchAll --coverage",
     "eject": "react-scripts eject",
     "lint:check": "eslint \"**/*.{ts,tsx}\" --max-warnings=0",
     "lint:fix": "eslint \"**/*.{ts,tsx}\" --fix",
@@ -105,6 +105,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.4.5",
     "jest-enzyme": "^7.1.2",
     "jest-localstorage-mock": "^2.4.19",
     "jest-location-mock": "^1.0.9",
