feat: Added target branch checking PR workflow (#1443)
* feat: Added target branch checking PR workflow

- If the target branch is not develop than this check will fail.

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

* Appended extra line at the end

---------

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -139,3 +139,14 @@ jobs:
 
       - name: Validate Documents
         run: graphql-inspector validate './src/GraphQl/**/*.ts' './talawa-api/schema.graphql'
+
+  Check-Target-Branch:
+    name: Check Target Branch
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check if the target branch is develop
+        if: github.event.pull_request.base.ref != 'develop'
+        run: |
+          echo "Error: Pull request target branch must be 'develop'. Please refer PR_GUIDELINES.md"
+          exit 1
+
