--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
     "inquirer": "^8.0.0",
-    "jest-docblock": "^27.4.0",
     "js-cookie": "^3.0.1",
     "lint-staged": "^15.2.0",
     "markdown-toc": "^1.2.0",
@@ -65,9 +64,9 @@
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "prepare": "husky install",
     "jest-preview": "jest-preview",
-    "setup": "tsx setup.ts",
     "update:toc": "node scripts/githooks/update-toc.js",
-    "lint-staged": "lint-staged --concurrent false"
+    "lint-staged": "lint-staged --concurrent false",
+    "setup": "tsx setup.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -108,7 +107,10 @@
     "@typescript-eslint/parser": "^5.9.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "cross-env": "^7.0.3",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^25.3.4",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
@@ -117,7 +119,6 @@
     "jest-localstorage-mock": "^2.4.19",
     "jest-location-mock": "^1.0.9",
     "jest-preview": "^0.3.1",
-    "jquery": "^3.2.1",
     "postcss-modules": "^6.0.0",
     "tsx": "^3.11.0"
   },
