--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.0.0",
   "private": true,
   "type": "module",
+  "config-overrides-path": "scripts/config-overrides",
   "dependencies": {
     "@apollo/client": "^3.4.0-beta.19",
     "@apollo/link-error": "^2.0.0-beta.3",
@@ -30,6 +31,7 @@
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-modal": "^3.12.1",
     "bootstrap": "^5.3.0",
+    "customize-cra": "^1.0.0",
     "dayjs": "^1.10.7",
     "detect-newline": "^4.0.0",
     "enzyme": "^3.11.0",
@@ -49,6 +51,7 @@
     "node-sass": "^9.0.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.7.4",
     "react-calendar": "^4.2.1",
     "react-datepicker": "^4.2.0",
@@ -69,7 +72,7 @@
     "yarn": "^1.22.17"
   },
   "scripts": {
-    "serve": "react-scripts start",
+    "serve": "node ./scripts/config-overrides/custom_start.js",
     "build": "react-scripts build",
     "test": "cross-env NODE_ENV=test node scripts/test.js --env=./scripts/custom-test-env.js --watchAll --coverage",
     "eject": "react-scripts eject",
