--- a/package.json
+++ b/package.json
@@ -86,24 +86,27 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/enzyme": "^3.10.9",
-    "@types/js-cookie": "^3.0.2",
-    "@types/react": "^17.0.14",
-    "@types/react-router-dom": "^5.1.8",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/enzyme": "^3.10.9",
     "@types/jest": "^26.0.24",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^12.20.16",
+    "@types/react": "^17.0.14",
     "@types/react-bootstrap": "^0.32.32",
     "@types/react-datepicker": "^4.1.4",
     "@types/react-dom": "^17.0.9",
     "@types/react-google-recaptcha": "^2.1.5",
+    "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "cross-env": "^7.0.3",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^25.3.4",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
@@ -112,10 +115,7 @@
     "jest-localstorage-mock": "^2.4.19",
     "jest-location-mock": "^1.0.9",
     "jest-preview": "^0.3.1",
-    "postcss-modules": "^6.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^25.3.4",
-    "eslint-plugin-prettier": "^3.4.0"
+    "postcss-modules": "^6.0.0"
   },
   "resolutions": {
     "@apollo/client": "^3.4.0-beta.19",
