--- a/.github/workflows/authorized-changes-detection.yml
+++ b/.github/workflows/authorized-changes-detection.yml
@@ -25,6 +25,9 @@ on:
       - 'CODEOWNERS'
       - 'LICENSE'
       - 'setup.ts'
+      - 'Dockerfile'
+      - 'docker-compose.yml'
+      - '.dockerignore'
       
 jobs:
   Checking-for-unauthorized-file-changes:
