--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -63,6 +63,11 @@ jobs:
       - name: Checkout the Repository
         uses: actions/checkout@v3
 
+      - name: Use Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
       - name: Restore node_modules from cache
         id: cache-npm
         uses: actions/cache@v3
@@ -136,6 +141,7 @@ jobs:
           path: talawa-admin-docs
 
   Copy-docs-to-talawa-docs:
+    needs : Generate-Documentation
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
