--- a/.gitignore
+++ b/.gitignore
@@ -34,13 +34,4 @@ debug.log
 # No editor related files
 .idea
 .vscode
-
-# VIM editor files
-[._]*.s[a-v][a-z]
-!*.svg  # comment out if you don't need vector files
-[._]*.sw[a-p]
-[._]s[a-rt-v][a-z]
-[._]ss[a-gi-z]
-[._]sw[a-p]
-Session.vim
-Sessionx.vim
+*.swp
