--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
+    "inquirer": "^8.0.0",
     "js-cookie": "^3.0.1",
     "lint-staged": "^15.2.0",
     "markdown-toc": "^1.2.0",
@@ -64,7 +65,8 @@
     "prepare": "husky install",
     "jest-preview": "jest-preview",
     "update:toc": "node scripts/githooks/update-toc.js",
-    "lint-staged": "lint-staged --concurrent false"
+    "lint-staged": "lint-staged --concurrent false",
+    "setup": "tsx setup.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -90,9 +92,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/enzyme": "^3.10.9",
+    "@types/inquirer": "^9.0.7",
     "@types/jest": "^26.0.24",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^12.20.16",
+    "@types/node-fetch": "^2.6.10",
     "@types/react": "^17.0.14",
     "@types/react-bootstrap": "^0.32.32",
     "@types/react-datepicker": "^4.1.4",
@@ -115,7 +119,8 @@
     "jest-localstorage-mock": "^2.4.19",
     "jest-location-mock": "^1.0.9",
     "jest-preview": "^0.3.1",
-    "postcss-modules": "^6.0.0"
+    "postcss-modules": "^6.0.0",
+    "tsx": "^3.11.0"
   },
   "resolutions": {
     "@apollo/client": "^3.4.0-beta.19",
